# entigram

./: .gitignore  AGENTS.md  AGENT_INSTRUCTIONS.md  AGY.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  LICENSE  MANIFEST.in  Makefile  NOTICE  OLLAMA.md  README.md  TRADEMARKS.md  ci_log.txt  draft_schema.lds  draft_schema.ttl  generate_agentic_visual_v3.py  interview_prompt.md  pyproject.toml  requirements.txt  sample_ehr.csv  schema.lds  schema.ttl  setup.py  substack_post.md
.agents/: AGENTS.md
.etg/: agent_policy.md  entigram.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.streamlit/: config.toml
docs/: agent-orchestration.md  mcp-tools.md
entigram/: __main__.py  agent_inventory.py  broker.py  content_publishing_pipeline.py  due_diligence_pipeline.py  extraction_pipeline.py  federated_router.py  graphql_bridge.py  injector.py  inventory_strategist.py  mcp_server.py  mcp_service.py  package_builder.py  package_catalog.py  package_signing.py  panel_bridge.py  product_cataloger.py  project_history.py  registry.py  server.py  simulator.py  supplier_auditor.py  supplier_performance_monitor.py  utils.py  warehouse_auditor.py
migrations/: V2026.05.20.2111__update.sql  V2026.05.20.2155__update.sql
ontology/: schema.ttl
partner_reconciliation_demo/: internal_supply_chain.lds  techcorp_logistics.lds  techcorp_vendors.csv
salesforce_supplychain_demo/: salesforce.lds  supplychain.lds
scripts/: audit_fresh_repo_readiness.sh  demo_immutable_gate.py  demo_partner_reconciliation.py  demo_salesforce_supplychain_integration.py  update_homebrew_formula.py  versioning.py
spec/: ENTIGRAM_ARCHITECTURE.md
tests/: __init__.py  test_agent_orchestration.py  test_agent_policy.py  test_alignment_protocol.py  test_auto_join.py  test_broker_resolution.py  test_broker_sync.py  test_business_ecosystem.py  test_cli_integration.py  test_cloudflare_ollama_proxy.py  test_codex_agents.py  test_codex_runner.py  test_commissioner.py  test_delivery_ledger.py  test_domain_discovery.py  test_domain_sqlite_injector.py  test_entigram_on_entigram.py  test_entigram_release_model.py  test_entigram_self_improvement_model.py  test_federated_multi_hop.py  test_federated_routing.py  test_federated_routing_alignments.py  test_graphql_bridge.py  test_graphql_bridge_advanced.py  test_headless_modeling.py  test_health_logic.py  test_homebrew_formula_update.py  test_hydration.py  test_inventory_strategist.py  test_mcp_service.py  test_merge.py  test_migration_runner.py  test_negotiator.py  test_negotiator_blocking.py  test_new_domains.py  test_ontology_compiler.py  test_package_catalog.py  test_package_signing.py  test_panel_bridge.py  (+17 more)
(+56 files in other folders)
