[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "entigram-ai"
version = "1.12.0"
description = "Schema-first semantic governance layer for enterprise agents"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Entigram Authors" }
]
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pysqlite3",
    "pyyaml",
    "networkx",
    "inflect<7.3.0",
    "protobuf>=5.26.1",
    "requests",
    "mcp>=1.0.0",
    "cryptography>=42.0.0"
]

[project.optional-dependencies]
ui = [
    "streamlit>=1.35.0",
]

[project.urls]
Homepage = "https://entigram.ai"
Source = "https://github.com/nyabutid/entigram"
Documentation = "https://entigram.ai"
Tracker = "https://github.com/nyabutid/entigram/issues"

[project.scripts]
etg = "entigram.cli_runner.etg_cli:main"

[tool.setuptools]
include-package-data = false
packages = [
    "entigram", 
    "entigram.cli_runner", 
    "entigram.governance", 
    "entigram.schema_compiler", 
    "entigram.ontology_compiler", 
    "entigram.sensing", 
    "entigram.sqlite_ledger", 
    "entigram.ui", 
    "entigram.templates"
]

[tool.setuptools.package-data]
entigram = [
    "templates/**/*.lds",
    "templates/**/*.ttl",
    "templates/**/*.md",
    "templates/**/*.py",
    "templates/**/.gitignore",
    "ui/media/*.svg",
]
